[package]
name = "dorfconf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"

[dependencies.rust-uci]
git = "https://github.com/ffddorf/rust-uci"
rev = "29769d8803bf25a0c628ff7b7335f5660947a4f3"
# path = "../rust-uci/rust-uci"

[features]
vendor-uci = ["rust-uci/vendored"]

[profile.release]
# minimize binary size based on https://github.com/johnthagen/min-sized-rust
strip = true
opt-level = "z"
lto = true
codegen-units = 1
