[package]
name = "dorfconf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"

[dependencies.rust-uci]
git = "https://github.com/ffddorf/rust-uci"
rev = "2ff749c5d49cd0f004966b64daebbff78e2f288e"
# path = "../../rust-uci/rust-uci"

[features]
vendor-uci = ["rust-uci/vendored"]
ide-defaults = ["vendor-uci"]
