[package]
name = "dorfconf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"

[dependencies.rust-uci]
git = "https://github.com/ffddorf/rust-uci"
rev = "febcc3941b894c233d175592773e87f52bfbc0ac"
# path = "../../rust-uci/rust-uci"

[features]
vendor-uci = ["rust-uci/vendored"]
ide-defaults = ["vendor-uci"]
